--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "compressorjs": "^1.2.1",
     "css-unit-converter-js": "^1.0.2",
     "csstree-validator": "^4.0.1",
     "dom-to-semantic-markdown": "^1.5.0",
@@ -53,6 +54,7 @@
     "json5": "^2.2.3",
     "jss": "^10.10.0",
     "jss-preset-default": "^10.10.0",
+    "jszip": "^3.10.1",
     "lodash-es": "^4.17.22",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
@@ -60,6 +62,7 @@
     "php-serialize": "^5.1.3",
     "postcss": "^8.5.6",
     "prettier": "^3.7.4",
+    "pretty-bytes": "^7.1.0",
     "qr-code-styling": "^1.9.2",
     "quicktype-core": "^23.2.6",
     "react": "19.2.3",
