Added Image Cropper tool

--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-dom": "19.2.3",
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
+    "react-image-crop": "^11.0.10",
     "react-markdown": "10",
     "react-resizable-panels": "^3.0.6",
     "rehype-slug": "^6.0.0",
