Added Tailwind v3 convert tools

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "compressorjs": "^1.2.1",
+    "css-to-tailwind-translator": "^1.2.8",
     "css-unit-converter-js": "^1.0.2",
     "csstree-validator": "^4.0.1",
     "dom-to-semantic-markdown": "^1.5.0",
